attempted to fix the firt gif by changing to display instead of visibility

--- a/Styles.css
+++ b/Styles.css
@@ -517,10 +517,10 @@ h2 {
 }
 #a-little-bit {
 	height: 20px;
-	visibility: hidden;
+	display: none;
 }
 .visibleNow#a-little-bit {
-	visibility: visible;
+	display: inline-block;
 }
 #tech-no-log-ic {
 	height: 27px;
